crates/rome_formatter/tests/specs/prettier/comments/issue-3532.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 121
expression: issue-3532.js

---
# Input
```js
import React from 'react';

/*
import styled from 'react-emotion';

const AspectRatioBox = styled.div`
  &::before {
    content: '';
    width: 1px;
    margin-left: -1px;
    float: left;
    height: 0;
    padding-top: ${props => 100 / props.aspectRatio}%;
  }

  &::after {
    /* To clear float *//*
    content: '';
    display: table;
    clear: both;
  }
`;
*/

const AspectRatioBox = ({
  aspectRatio,
  children,
  ...props
}) => (
  <div
    className={`height: 0;
  overflow: hidden;
  padding-top: ${props => 100 / props.aspectRatio}%;
  background: white;
  position: relative;`}
  >
    <div>{children}</div>
  </div>
);

export default AspectRatioBox;

```

# Output
```js
import React from 'react';

/*
import styled from 'react-emotion';

const AspectRatioBox = styled.div`
  &::before {
    content: '';
    width: 1px;
    margin-left: -1px;
    float: left;
    height: 0;
    padding-top: ${props => 100 / props.aspectRatio}%;
  }

  &::after {
    /* To clear float *//*
    content: '';
    display: table;
    clear: both;
  }
`;
*/

const AspectRatioBox = ({
  aspectRatio,
  children,
  ...props
}) => (
  <div
    className={`height: 0;
  overflow: hidden;
  padding-top: ${props => 100 / props.aspectRatio}
%;
  background: white;
  position: relative;`}
  >
    <div>
{
  children;
}
</div>
  </div>

)

export default AspectRatioBox;

```

# Errors
```
error[SyntaxError]: Invalid assignment to `<div
    className`
   ┌─ issue-3532.js:30:3
   │  
30 │ ┌   <div
31 │ │     className={`height: 0;
   │ └─────────────^ This expression cannot be assigned to

error[SyntaxError]: expected a property, a shorthand property, a getter, a setter, or a method but instead found '`height: 0;
  overflow: hidden;
  padding-top: ${props => 100 / props.aspectRatio'
   ┌─ issue-3532.js:31:16
   │  
31 │       className={`height: 0;
   │ ┌────────────────^
32 │ │   overflow: hidden;
33 │ │   padding-top: ${props => 100 / props.aspectRatio}%;
   │ └─────────────────────────────────────────────────^ Expected a property, a shorthand property, a getter, a setter, or a method here

error[SyntaxError]: expected `')'` but instead found `%;
  background: white;
  position: relative;`
   ┌─ issue-3532.js:33:51
   │  
33 │     padding-top: ${props => 100 / props.aspectRatio}%;
   │ ┌───────────────────────────────────────────────────^
34 │ │   background: white;
35 │ │   position: relative;`}
   │ └─────────────────────^ unexpected

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ issue-3532.js:37:20
   │
37 │     <div>{children}</div>
   │                    ^ TypeScript only syntax

error[SyntaxError]: type assertion are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ issue-3532.js:38:3
   │
38 │   </div>
   │   ^ TypeScript only syntax

error[SyntaxError]: expected an expression but instead found ')'
   ┌─ issue-3532.js:39:1
   │
39 │ );
   │ ^ Expected an expression here


```


